# gvm

./: Cargo.toml  Makefile  README.md
.dump/: 0751d983-3a78-11f1-a848-42010aa60fd6.json  147196f5-4305-11f1-b66a-42010aa60fd6.json  1d870ab4-37f9-11f1-aac8-52352fa54831.json  396a2bc8-3a6c-11f1-8fc3-42010aa60fd6.json  3b8614ff-430b-11f1-8a44-42010aa60fd6.json  44044ed8-4201-11f1-b39d-42010aa60fd6.json  5eadec1c-4206-11f1-9d24-f6d9e0fdc6a0.json  8e6b6218-3b39-11f1-92bc-42010aa60fd6.json  9ecae399-3a72-11f1-8809-42010aa60fd6.json  cc68328e-3a76-11f1-8397-42010aa60fd6.json  e28f7d9b-3a75-11f1-98c2-42010aa60fd6.json  e8710e1a-3a95-11f1-ba3b-42010aa60fd6.json  f808071d-41ff-11f1-9823-42010aa60fd6.json  f918f7c4-40e9-11f1-b163-f6d9e0fdc6a0.json
.github/workflows/: ci.yaml  release.yaml
src/: config.rs  gcp.rs  main.rs  ssh.rs
