[package]
name = "gvm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gvm"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
clap        = { version = "4",    features = ["derive", "env"] }
anyhow      = "1"
thiserror   = "2"
reqwest     = { version = "0.13", features = ["json"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
gcp_auth    = "0.12"
colored     = "3"
google-cloud-auth = "1.9.0"
google-cloud-compute-v1 = "2.4.0"
