[package]
name = "gce-vm"
version = "1.0.4"
edition = "2021"
authors = ["Rodolfo Villaruz <rodolfo@yes.ph>"]
description = "A small command-line tool for managing a single Google Compute Engine VM you use as a development or work machine."
license = "MIT"
repository = "https://github.com/rodolfovillaruz/gvm"
readme = "README.md"
keywords = ["cli", "tool"]
categories = ["command-line-utilities"]
exclude = [
    ".dump/*"
]

[[bin]]
name = "gvm"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
clap        = { version = "4", features = ["derive", "env"] }
anyhow      = "1"
thiserror   = "2"
reqwest     = { version = "0.13", features = ["json", "rustls-tls-webpki-roots"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
gcp_auth    = "0.12"
colored     = "3"
google-cloud-auth = "1.9.0"
google-cloud-compute-v1 = "2.4.0"
google-cloud-gax = "1.9.1"
